--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body
 {
     line-height: 1.5;
     font-size:16px;
-    font-family:'Poppins' sans-serif;
+    font-family:'Poppins', sans-serif;
 }
 *
 {
@@ -59,7 +59,7 @@ ul
     opacity: 1;
     animation: slideSection 1s ease;
 }
-/* @keyframes slideSection
+@keyframes slideSection
 {
     0% 
     {
@@ -69,7 +69,7 @@ ul
     {
         transform: translateX(0%);
     }
-} */
+}
 .hidden
 {
     display: none ;
@@ -248,6 +248,8 @@ ul
     position: absolute;
     top: -6px;
     left: 0;
+
+    animation: sli;
 }
 .aside .nav-toggler span::after
 {
@@ -268,6 +270,7 @@ ul
     margin-bottom: 20px;
     display: block;
 }
+
 .aside .nav li a
 {
     font-size: 16px;
@@ -353,11 +356,14 @@ h3.my-profession
     left: 20px;
     top: -70px;
 }
-.home .home-img img
-{
+img{
+    max-width: 100%;
+}
+
+.home .home-img img {
     margin: auto;
+    max-width: 300px;
     border-radius: 5px;
-    height: 300px;
 }
 /* About */
 .about .about-content
@@ -453,6 +459,10 @@ h3.my-profession
 
 
 
+.toggle-menu
+{
+    display: none;
+}
 
 
 
@@ -490,15 +500,15 @@ h3.my-profession
     flex: 0 0 100%;
     max-width: 100%;
 }
-.about .about-content .timeline
+/* .about .about-content .timeline
 {
     background-color: var(--bg-black-100);
     padding: 30px 15px;
     border: 1px solid var(--bg-black-50);
     border-radius: 10px;
     width: 100%;
-    position: relative;
-}
+    position: block;
+} */
 .about .about-content .timeline .timeline-item 
 {
     position: relative;
@@ -509,31 +519,50 @@ h3.my-profession
 {
     padding-bottom: 0;
 } 
-/* .about .about-content .timeline .timeline-item ::before
+.about .about-content .timeline .timeline-item ::before
 {
-    content: '';
+    /* content: '';
     width: 1px;
     position: absolute;
     height: 100%;
     left: 7px;
     top: 0;
-    background-color: var(--skin-color);
-} */
-/* .about .about-content .timeline .timeline-item .circle-dot
-{
+    background-color: var(--skin-color); */
+    content: "";
     border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background-color:var(--skin-color);
+    position: absolute;
+    left: -10px;
+    top: 21px;
+}
+.about .about-content .timeline .timeline-item::after
+{
+    content: attr(data-date);
+      position: absolute;
+      right: calc(var(--item-width) + 40px);
+      top: 16px;
+      float: right;
+      font-weight: bold;
+      white-space: nowrap;
+}
+.about .about-content .timeline .timeline-item .circle-dot
+{
+    /* border-radius: 50%;
     left: 0;
     top: 0;
     height: 15px;
     width: 15px;
-    background-color: var(--skin-color);
-    position: absolute;
-} */
+    background-color: var(--skin-color); */
+    /* position: absolute; */
+}
 .about .about-content .timeline .timeline-date
 {
     font-weight: 400;
     font-size: 14px;
     margin-bottom: 12px;
+    text-align: left;
     color: var(--text-black-700);
 }
 .about .about-content .timeline .timeline-date .fa
@@ -545,6 +574,7 @@ h3.my-profession
     font-weight: 700;
     font-size: 18px;
     margin-bottom: 15px;
+    text-align: left;
     text-transform: capitalize;
     color: var(--text-black-900);
 }
@@ -588,6 +618,7 @@ h3.my-profession
 {
     width: 100%;
     display: block;
+    
 }
 /* Contact */
 .contact-title
@@ -662,14 +693,95 @@ h3.my-profession
     {
         flex: 0 0 100%;
         max-width: 100%;
+        margin-bottom: 30px;
     }
     .home .home-img
     {
-        display: none;
+        display: block;
     }
 }
-@media (max-width:767px)
+@media (max-width:1099px)
 {
+    .toggle-menu{
+        transform: translateX(10%) translateY(100%);
+        display: none;
+    }
+    .toggle-icon{
+        font-size:30px;
+        background-color: var(--bg-black-100);
+        border: 1px solid var(--bg-black-50);
+        padding:10px;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+  
+    .toggle-items{
+        list-style: none;
+        background-color:var(--bg-black-100);
+        width:150px;
+        line-height:34px;
+        position: absolute;
+        display: none;
+        right: 0px;
+        padding: 10px;
+        box-shadow: 0 0 20px rgba(48,46,77,0.15);
+
+        -webkit-animation-name: zoomIn;
+        animation-name: zoomIn;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
+        }
+        @-webkit-keyframes zoomIn {
+        0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+        }
+        50% {
+        opacity: 1;
+        }
+        }
+        @keyframes zoomIn {
+        0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+        }
+        50% {
+        opacity: 1;
+        }
+    }
+    
+    li[class^="toggle-item-"] a{
+        color: var(--skin-color);
+        text-decoration: none;
+        font-weight: bold; 
+        font-family:'Poppins', sans-serif; 
+    }
+    /* li[class^="toggle-item-"] a:hover{
+        color: #dc18ff!important;
+    } */
+    /* .toggle-item-1 a{
+        color:rgb(97 159 255)!important;
+    } */
+    #toggle-btn{
+        display: none;
+    }
+    #toggle-btn:checked +ul{
+        display: block;
+         
+    }
+    .toggle-menu {
+        display: block;
+        position: absolute;
+        right: 0;
+        margin-right: 27px;
+        z-index: 999;
+    }
+
+
     .contact .contact-info-item,
     .portfolio .portfolio-item,
     .about .about-content .experience,
@@ -681,3 +793,71 @@ h3.my-profession
         max-width: 100%;
     }
 }
+
+#timeline-container {
+    background: rgb(0, 17, 46);
+    background: linear-gradient(
+      171deg,
+      rgba(0, 17, 46, 1) 0%,
+      rgba(29, 21, 148, 1) 100%
+    );
+    overflow: auto;
+    padding: 60px 0;
+  }
+
+  /* #timeline-container .heading {
+        text-align: center;
+        font-family: var(--font-family-1);
+        font-weight: 700;
+        font-size: 3rem;
+        color: white;
+        margin-top: 0;
+  } */
+   
+  
+  /* .timeline {
+    margin: 0 auto;
+    position: block;
+    left: 120px;
+    width: 80%;
+    max-width: 900px;
+    margin-top: 16px;
+    margin-left: 5%;
+  }
+   */
+  .timeline-item {
+    color: var(--bg-black-50);
+    font-family:'Poppins', sans-serif;
+    text-align: left;
+    font-size: 1.4rem;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    border-left: 4px solid var(--skin-color);
+    position: relative;
+    /* list-style-type: none; */
+    --item-width: calc(100%);
+  }
+  /* .timeline-item::after {
+      content: attr(data-date);
+      position: absolute;
+      right: calc(var(--item-width) + 40px);
+      top: 16px;
+      float: right;
+      font-weight: bold;
+      white-space: nowrap;
+  }
+  
+  .timeline-item::before {
+      content: "";
+      border-radius: 50%;
+      width: 16px;
+      height: 16px;
+      background-color: #fff;
+      position: absolute;
+      left: -10px;
+      top: 21px;
+  } */
+  
+  .timeline-item:last-child {
+      border-bottom: none;
+  }
+  
